# noise-to-insight

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: streamlit_app.py
scripts/: generate_deck.py  run_demo.sh  run_streamlit.sh
src/: __init__.py  cli.py  config.py
src/ingest/: __init__.py  loader.py  profiler.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  anomalies.py  cleaning.py  forecast.py  graph.py  patterns.py  report.py  state.py
src/orchestrator/: __init__.py  graph.py
src/phases/: __init__.py  anomalies.py  cleaning.py  forecast.py  graph_build.py  patterns.py  report.py
src/viz/: __init__.py  graph_viz.py  refresh.py
templates/: report.html
tests/: test_anomalies.py  test_cleaning.py  test_forecast.py  test_graph.py  test_imports.py  test_ingest.py  test_orchestrator.py  test_patterns.py  test_report.py
tests/fixtures/: anomaly_orders.csv  events.json  forecast_series.csv  inventory_semicolon.csv  messy_orders.csv  orders.csv  segment_orders.csv  support_tickets.csv
