[project]
name = "noise-to-insight"
version = "0.1.0"
description = "AI Meets Data: From Noise to Insight — Microsoft Build 2026 hackathon pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shiraptinath C R", email = "agentic-insights@build2026.dev" }]
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "networkx>=3.0",
    "pyvis>=0.3",
    "plotly>=5.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "prophet>=1.1",
    "jinja2>=3.1",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
noise-to-insight = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
